# DitzelsHotel

./: README_DEV.md  manage.py  pyproject.toml
ditzelshotel_fe/: asgi.py  settings.py  urls.py  wsgi.py
hoteladmin/: admin.py  models.py  models_auth.py  views.py
hoteladmin/migrations/: 0001_initial.py
hoteladmin/templatetags/: divide.py
static/favicon/: site.webmanifest
templates/: frontpage.html  index.html  paginator.html
templates/detail/: order.html
templates/list/: current_guests.html  customer.html  employee.html  insert_logs.html  order.html  reservation.html  room.html  upcoming_reservations.html
templates/registration/: login.html  signup.html
templates/semantic-ui/: base.html  footer.html  navbar.html
