[tool.poetry]
name = "ditzelshotel_fe"
version = "0.1.0"
description = ""
authors = ["blue-hexagon <w0j8uhv5csio@opayq.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
mysqlclient = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
